...
            "state" : "translated",
            "value" : "Vytvořte heslo"
          }
        }
      }
    },
    "Create Account" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vytvořit účet"
          }
...
            "state" : "translated",
            "value" : "Přihlásit se"
          }
        }
      }
    },
    "Sign up" : {
      "comment" : "Link to registration",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Registrovat"
          }
        }
      }
    },
    "SOLD OUT" : {
      "extractionState" : "stale",
...
